Fixed a link of an image in HTML Area getting broken after update of link attributes. Fixed incorrect tab being selected in Insert Link dialog when editing an existing link. Fixed button toolbar overflowing onto the Insert Image dialog contents on high dialogs (#350)

--- a/src/main/resources/assets/admin/common/styles/api/util/htmlarea/image-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/api/util/htmlarea/image-dialog.less
@@ -18,21 +18,8 @@
     }
 
     .content-item-preview-panel {
-      max-height: 420px;
       overflow-y: auto;
       overflow-x: hidden;
-
-      @media screen and (max-height: 720px) {
-        max-height: 270px;
-      }
-
-      @media screen and (max-height: 540px) {
-        max-height: 115px;
-      }
-
-      @media screen and (max-height: 360px) {
-        max-height: 100px;
-      }
 
       > .progress-bar {
         display: none;
